--- a/other-categories/aria2/aria2.html
+++ b/other-categories/aria2/aria2.html
@@ -192,7 +192,7 @@
                     <h2 id="aria2"><a class="header" href="#aria2">aria2</a></h2>
 <h3 id="aria2-配置"><a class="header" href="#aria2-配置">aria2 配置</a></h3>
 <pre><code class="language-zsh"># 找个地方放 aria2，这里的路径都能按自己需求改，不必跟我保持一致
-sudo echo &quot;Aria2&quot; &gt; /etc/hostname
+sudo echo "Aria2" &gt; /etc/hostname
 sudo adduser Aria2
 su - Aria2
 mkdir -p ~/.aria2
