--- a/other-categories/git/git.html
+++ b/other-categories/git/git.html
@@ -205,10 +205,10 @@
 <pre><code>git add .
 </code></pre>
 <p><strong>4. 提交更改</strong></p>
-<pre><code>git commit -m &quot;&lt;message&gt;&quot;
+<pre><code>git commit -m "&lt;message&gt;"
 </code></pre>
 <p>如果要添加对跟踪文件所做的所有更改并提交。</p>
-<pre><code>git commit -a -m &quot;&lt;message&gt;&quot;
+<pre><code>git commit -a -m "&lt;message&gt;"
 </code></pre>
 <p><strong>5.从暂存区删除一个文件</strong></p>
 <pre><code>git reset &lt;file&gt;
@@ -293,7 +293,7 @@
 <pre><code>git stash
 </code></pre>
 <p>您还可以将消息添加到存储中。</p>
-<pre><code>git stash save &quot;&lt;message&gt;&quot;
+<pre><code>git stash save "&lt;message&gt;"
 </code></pre>
 <p><strong>27. 列出存储</strong></p>
 <pre><code>git stash list
