--- a/issues/mysql/mysql_issues.html
+++ b/issues/mysql/mysql_issues.html
@@ -194,26 +194,26 @@
 <p>“强制关机后 <code>mysql</code> （指物理机上部署，非容器）怎么启动不了了？！”</p>
 </blockquote>
 <p>这个报错是由于强制关机导致 <code>mysql</code> <code>pid</code> 文件丢失，查看 <code>mysql</code> 配置文件，找到 <code>pid</code> 文件位置，创建 <code>pid</code> 文件所在的目录并 <code>chown mysql:mysql &lt;目录&gt;</code>即可</p>
-<h2 id="error-fatal-error-please-read-security-section-of-the-manual-to-find-out-how-to-run-mysqld-as-root"><a class="header" href="#error-fatal-error-please-read-security-section-of-the-manual-to-find-out-how-to-run-mysqld-as-root">[ERROR] Fatal error: Please read &quot;Security&quot; section of the manual to find out how to run mysqld as root</a></h2>
+<h2 id="error-fatal-error-please-read-security-section-of-the-manual-to-find-out-how-to-run-mysqld-as-root"><a class="header" href="#error-fatal-error-please-read-security-section-of-the-manual-to-find-out-how-to-run-mysqld-as-root">[ERROR] Fatal error: Please read "Security" section of the manual to find out how to run mysqld as root</a></h2>
 <pre><code class="language-bash"># 指定用户来启动 mysqld
 mysqld --user=&lt;USER&gt; 
 </code></pre>
 <h2 id="备份脚本例子"><a class="header" href="#备份脚本例子">备份脚本例子</a></h2>
 <pre><code class="language-zsh">#!/bin/bash
-mysql_user=&quot;xxxx&quot;
-mysql_password=&quot;xxxx&quot;
-mysql_host=&quot;xxxx&quot;
-mysql_port=&quot;xxxx&quot;
+mysql_user="xxxx"
+mysql_password="xxxx"
+mysql_host="xxxx"
+mysql_port="xxxx"
 backup_dir=/opt/mysql_backup
 
 dt=`date +'%Y%m%d_%H%M'`
-echo &quot;Backup Begin Date:&quot; $(date +&quot;%Y-%m-%d %H:%M:%S&quot;)
+echo "Backup Begin Date:" $(date +"%Y-%m-%d %H:%M:%S")
 
 # 备份全部数据库
 mysqldump -h$mysql_host -P$mysql_port -u$mysql_user -p$mysql_password -R -E --all-databases --single-transaction &gt; $backup_dir/mysql_backup_$dt.sql
 
 find $backup_dir -mtime +7 -type f -name '*.sql' -exec rm -rf {} \;
-echo &quot;Backup Succeed Date:&quot; $(date +&quot;%Y-%m-%d %H:%M:%S&quot;)
+echo "Backup Succeed Date:" $(date +"%Y-%m-%d %H:%M:%S")
 </code></pre>
 
                     <!-- 暂时关闭评论 -->
