--- a/issues/nginx/nginx_issues.html
+++ b/issues/nginx/nginx_issues.html
@@ -215,7 +215,7 @@
    proxy_connect_timeout 300;
    # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
    proxy_http_version 1.1;
-   proxy_set_header Connection &quot;&quot;;
+   proxy_set_header Connection "";
    chunked_transfer_encoding off;
 
    proxy_pass http://localhost:9000; # If you are using docker-compose this would be the hostname i.e. minio
@@ -229,13 +229,13 @@
 <p>For HTTP, the proxy_http_version directive should be set to “1.1” and the “Connection” header field should be cleared</p>
 </blockquote>
 <pre><code class="language-nginx">proxy_http_version 1.1;
-proxy_set_header Connection &quot;&quot;;
+proxy_set_header Connection "";
 </code></pre>
 <h3 id="解决跨域"><a class="header" href="#解决跨域">解决跨域</a></h3>
 <pre><code class="language-nginx">location /api {
     add_header Access-Control-Allow-Origin * always;
     add_header Access-Control-Allow-Headers *;
-    add_header Access-Control-Allow-Methods &quot;GET, POST, PUT, OPTIONS&quot;;
+    add_header Access-Control-Allow-Methods "GET, POST, PUT, OPTIONS";
     proxy_pass https://baidu.com;
 }
 </code></pre>
