--- a/other-categories/minio/minio.html
+++ b/other-categories/minio/minio.html
@@ -199,15 +199,15 @@ x-minio-common: &amp;minio-common
  # set your minio version
  image: quay.io/minio/minio:RELEASE.2022-10-15T19-57-03Z
  restart: unless-stopped
- command: server --console-address &quot;:9001&quot; http://minio{1...4}/data{1...2}
+ command: server --console-address ":9001" http://minio{1...4}/data{1...2}
  expose:
- - &quot;9000&quot;
- - &quot;9001&quot;
+ - "9000"
+ - "9001"
  environment:
  MINIO_ROOT_USER: &lt;YOUR MINIO ROOT USER&gt;
  MINIO_ROOT_PASSWORD: &lt;YOUR MINIO ROOT PASSWORD&gt;
  healthcheck:
- test: [&quot;CMD&quot;, &quot;curl&quot;, &quot;-f&quot;, &quot;http://localhost:9000/minio/health/live&quot;]
+ test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
  interval: 30s
  timeout: 20s
  retries: 3 
@@ -245,8 +245,8 @@ nginx:
  volumes:
  - ./nginx.conf:/etc/nginx/nginx.conf:ro
  ports:
- - &quot;9000:9000&quot;
- - &quot;80:80&quot;
+ - "9000:9000"
+ - "80:80"
  depends_on:
  - minio1
  - minio2
@@ -317,7 +317,7 @@ http {
         # 允许跨域
         add_header Access-Control-Allow-Origin * always;
         add_header Access-Control-Allow-Headers *;
-        add_header Access-Control-Allow-Methods &quot;GET, POST, PUT, OPTIONS&quot;;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, OPTIONS";
         add_header Access-Control-Allow-Methods *;
 
          location / {
@@ -329,7 +329,7 @@ http {
                proxy_connect_timeout 300;
                # 默认是 HTTP/1, keepalive 需要 HTTP/1.1
                proxy_http_version 1.1;
-               proxy_set_header Connection &quot;&quot;;
+               proxy_set_header Connection "";
                chunked_transfer_encoding off;
                 proxy_pass http://localhost:9003;
         }
