--- a/rust/mini-redis/hello_tokio.html
+++ b/rust/mini-redis/hello_tokio.html
@@ -199,8 +199,8 @@ cd my-redis
 </code></pre>
 <h3 id="添加依赖"><a class="header" href="#添加依赖">添加依赖</a></h3>
 <p>接下来打开 <code>Cargo.toml</code> 并把下面的内容添加到 <code>[dependencies]</code> 下：</p>
-<pre><code class="language-toml">tokio = { version = &quot;1&quot;, features = [&quot;full&quot;] }
-mini-redis = &quot;0.4&quot;
+<pre><code class="language-toml">tokio = { version = "1", features = ["full"] }
+mini-redis = "0.4"
 </code></pre>
 <h3 id="写代码"><a class="header" href="#写代码">写代码</a></h3>
 <p>然后打开 <code>main.rs</code> 并将文件的内容替换成下面的：</p>
@@ -209,15 +209,15 @@ mini-redis = &quot;0.4&quot;
 #[tokio::main]
 async fn main() -&gt; Result&lt;()&gt; {
     // 向 mini-redis 的地址打开一个连接.
-    let mut client = client::connect(&quot;127.0.0.1:6379&quot;).await?;
+    let mut client = client::connect("127.0.0.1:6379").await?;
 
     // 设置一个叫 `hello` 的 key，它的内容是 `world`
-    client.set(&quot;hello&quot;, &quot;world&quot;.into()).await?;
+    client.set("hello", "world".into()).await?;
 
     // 去 get 这个 `hello`
-    let result = client.get(&quot;hello&quot;).await?;
+    let result = client.get("hello").await?;
 
-    println!(&quot;从服务端得到了值; result={:?}&quot;, result);
+    println!("从服务端得到了值; result={:?}", result);
 
     Ok(())
 }</code></pre></pre>
@@ -228,16 +228,16 @@ async fn main() -&gt; Result&lt;()&gt; {
 <pre><code class="language-zsh">❯ cargo run         
     Finished dev [unoptimized + debuginfo] target(s) in 0.15s
      Running `target/debug/my-redis`
-从服务端得到了值; result=Some(b&quot;world&quot;)
+从服务端得到了值; result=Some(b"world")
 </code></pre>
 <p>这样便是成功了，也算是即将要开始 coding 了！</p>
 <h2 id="看看具体发生什么"><a class="header" href="#看看具体发生什么">看看具体发生什么</a></h2>
 <p>让我们回顾一下刚刚做的事情，代码量不多，但是其实发生了很多事情。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
-</span>let mut client = client::connect(&quot;127.0.0.1:6379&quot;).await?;
+</span>let mut client = client::connect("127.0.0.1:6379").await?;
 <span class="boring">}</span></code></pre></pre>
-<p><code>client::connect</code> 函数是由 <code>mini_redis</code> 这个 crate 提供的。它通过<strong>异步</strong>的方式向指定的地址建立一个 TCP 连接。一旦连接成功建立了，将会返回一个 <code>Client</code> handle(中文叫句柄)（这里给它起了个名 &quot;client&quot;）。</p>
+<p><code>client::connect</code> 函数是由 <code>mini_redis</code> 这个 crate 提供的。它通过<strong>异步</strong>的方式向指定的地址建立一个 TCP 连接。一旦连接成功建立了，将会返回一个 <code>Client</code> handle(中文叫句柄)（这里给它起了个名 "client"）。</p>
 <p>即使这个操作是<strong>异步</strong>执行的，但是我们写的这个代码看起来像是<strong>同步</strong>的。通过 <code>.await</code> 操作符来表明这是一个异步操作。</p>
 <h3 id="何为异步编程"><a class="header" href="#何为异步编程">何为异步编程？</a></h3>
 <p>相信看过 <code>The book</code> 或者 <code>Rust course</code> 的大伙都知道，下面就贴原文啦～</p>
@@ -280,7 +280,7 @@ pub async fn connect&lt;T: ToSocketAddrs&gt;(addr: T) -&gt; Result&lt;Client&gt;
 <p>如果要真正地去执行这个操作，需要对这个返回值使用 <code>.await</code> 操作符。</p>
 <p>就像下面这样：</p>
 <pre><pre class="playground"><code class="language-rust">async fn say_world() {
-    println!(&quot;world&quot;);
+    println!("world");
 }
 
 #[tokio::main]
@@ -289,7 +289,7 @@ async fn main() {
     let op = say_world();
 
     // 这个 println! 会先出现。
-    println!(&quot;hello&quot;);
+    println!("hello");
 
     // 对 `op` 调用 `.await`。
     op.await;
@@ -315,19 +315,19 @@ world
 <p>例如以下内容：</p>
 <pre><pre class="playground"><code class="language-rust">#[tokio::main]
 async fn main() {
-    println!(&quot;hello&quot;);
+    println!("hello");
 }</code></pre></pre>
 <p>被转化成：</p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let mut rt = tokio::runtime::Runtime::new().unwrap();
     rt.block_on(async {
-        println!(&quot;hello&quot;);
+        println!("hello");
     })
 }</code></pre></pre>
 <p><code>tokio runtime</code> 的细节将在后面介绍。</p>
 <h3 id="cargo-features"><a class="header" href="#cargo-features">Cargo features</a></h3>
 <p>在本教程引入 <code>tokio</code> 依赖时，<code>full</code> feature flag 被启用了。</p>
-<pre><code class="language-toml">tokio = { version = &quot;1&quot;, features = [&quot;full&quot;] }
+<pre><code class="language-toml">tokio = { version = "1", features = ["full"] }
 </code></pre>
 <p><code>Tokio</code> 有很多功能（<code>TCP</code>、<code>UDP</code>、<code>Unix sockets</code>、<code>timer</code>、<code>sync utilities</code>、<code>multiple scheduler types</code> 等）。并非所有应用程序都需要所有功能(<code>full</code>)。当尝试优化编译时间或最终应用程序占用空间时，应用程序可以决定只选择它用到的那些功能。</p>
 <p>目前，我们在依赖 <code>tokio</code> 时使用 <code>full</code> feature，来方便 code。</p>
