--- a/rust/mini-redis/select.html
+++ b/rust/mini-redis/select.html
@@ -202,26 +202,26 @@ async fn main() {
     let (tx2, rx2) = oneshot::channel();
 
     tokio::spawn(async {
-        let _ = tx1.send(&quot;one&quot;);
+        let _ = tx1.send("one");
     });
 
     tokio::spawn(async {
-        let _ = tx2.send(&quot;two&quot;);
+        let _ = tx2.send("two");
     });
 
     tokio::select! {
         val = rx1 =&gt; {
-            println!(&quot;rx1 completed first with {:?}&quot;, val);
+            println!("rx1 completed first with {:?}", val);
         }
         val = rx2 =&gt; {
-            println!(&quot;rx2 completed first with {:?}&quot;, val);
+            println!("rx2 completed first with {:?}", val);
         }
     }
 }</code></pre></pre>
 <p>使用了两个 oneshot channel，它俩中的任何一个都可以第一个完成。<code>select!</code> 语句会在这两个 channel 上 await ，并且绑定 <code>val</code> 到任务的返回值上。当 <code>tx1</code> 或 <code>tx2</code> 完成，相关联的 block 会被执行。</p>
 <p><strong>没有</strong>完成的分支会被直接 drop 掉。在这个例子中，计算会 await 在每个 channel 的 <code>oneshot::Receiver</code> 上。没有完成的 <code>oneshot::Receiver</code> 会被丢弃。</p>
 <h3 id="cancellation"><a class="header" href="#cancellation">Cancellation</a></h3>
-<p>在异步 Rust 中，取消表现为 drop 一个 future。回想一下 &quot;<a href="https://m4n5ter.github.io/rust/mini-redis/async_in_depth.html">Async in depth</a>&quot;，异步 Rust 操作通过 future 实现，并且 future 是惰性的。只有 future 被 poll 了，才会有新的进展。如果 future 被 drop 了，那么相关联的状态也会被 drop ，也就是说不会再有新的进展了。</p>
+<p>在异步 Rust 中，取消表现为 drop 一个 future。回想一下 "<a href="https://m4n5ter.github.io/rust/mini-redis/async_in_depth.html">Async in depth</a>"，异步 Rust 操作通过 future 实现，并且 future 是惰性的。只有 future 被 poll 了，才会有新的进展。如果 future 被 drop 了，那么相关联的状态也会被 drop ，也就是说不会再有新的进展了。</p>
 <p>也就是说，有时异步操作会产生后台任务或启动在后台运行的其他操作。举个例子，再上面的示例中，一个任务被创建用来在背后发送消息，一般来说，任务将会执行一些计算来生成值。</p>
 <p>Futures 或者其它类型可以实现 <code>Drop</code> 来清理背后的资源。Tokio 的 <code>oneshot::Receiver</code> 通过往 <code>Sender</code> 发送一个关闭信号来实现 <code>Drop</code> 。这个收到关闭信号的 sender 会通过 drop 来中断正在执行的操作。</p>
 <pre><pre class="playground"><code class="language-rust">use tokio::sync::oneshot;
@@ -250,15 +250,15 @@ async fn main() {
     });
 
     tokio::spawn(async {
-        let _ = tx2.send(&quot;two&quot;);
+        let _ = tx2.send("two");
     });
 
     tokio::select! {
         val = rx1 =&gt; {
-            println!(&quot;rx1 completed first with {:?}&quot;, val);
+            println!("rx1 completed first with {:?}", val);
         }
         val = rx2 =&gt; {
-            println!(&quot;rx2 completed first with {:?}&quot;, val);
+            println!("rx2 completed first with {:?}", val);
         }
     }
 }</code></pre></pre>
@@ -279,12 +279,12 @@ impl Future for MySelect {
 
     fn poll(mut self: Pin&lt;&amp;mut Self&gt;, cx: &amp;mut Context&lt;'_&gt;) -&gt; Poll&lt;()&gt; {
         if let Poll::Ready(val) = Pin::new(&amp;mut self.rx1).poll(cx) {
-            println!(&quot;rx1 completed first with {:?}&quot;, val);
+            println!("rx1 completed first with {:?}", val);
             return Poll::Ready(());
         }
 
         if let Poll::Ready(val) = Pin::new(&amp;mut self.rx2).poll(cx) {
-            println!(&quot;rx2 completed first with {:?}&quot;, val);
+            println!("rx2 completed first with {:?}", val);
             return Poll::Ready(());
         }
 
@@ -330,15 +330,15 @@ async fn main() {
 
     // Spawn a task that sends a message over the oneshot
     tokio::spawn(async move {
-        tx.send(&quot;done&quot;).unwrap();
+        tx.send("done").unwrap();
     });
 
     tokio::select! {
-        socket = TcpStream::connect(&quot;localhost:3465&quot;) =&gt; {
-            println!(&quot;Socket connected {:?}&quot;, socket);
+        socket = TcpStream::connect("localhost:3465") =&gt; {
+            println!("Socket connected {:?}", socket);
         }
         msg = rx =&gt; {
-            println!(&quot;received message first {:?}&quot;, msg);
+            println!("received message first {:?}", msg);
         }
     }
 }</code></pre></pre>
@@ -355,7 +355,7 @@ async fn main() -&gt; io::Result&lt;()&gt; {
         tx.send(()).unwrap();
     });
 
-    let mut listener = TcpListener::bind(&quot;localhost:3465&quot;).await?;
+    let mut listener = TcpListener::bind("localhost:3465").await?;
 
     tokio::select! {
         _ = async {
@@ -368,7 +368,7 @@ async fn main() -&gt; io::Result&lt;()&gt; {
             Ok::&lt;_, io::Error&gt;(())
         } =&gt; {}
         _ = rx =&gt; {
-            println!(&quot;terminating accept loop&quot;);
+            println!("terminating accept loop");
         }
     }
 
@@ -392,7 +392,7 @@ async fn main() {
         res2 = computation2() =&gt; res2,
     };
 
-    println!(&quot;Got = {}&quot;, out);
+    println!("Got = {}", out);
 }</code></pre></pre>
 <p>因为这个，它要求<strong>每个</strong>分支的 <code>&lt;handler&gt;</code> 表达式计算出同样的类型。如果 <code>select!</code> 的输出不被需要，一个不错的实践是让表达式返回 <code>()</code></p>
 <h2 id="errors"><a class="header" href="#errors">Errors</a></h2>
@@ -405,7 +405,7 @@ use std::io;
 async fn main() -&gt; io::Result&lt;()&gt; {
     // [setup `rx` oneshot channel]
 
-    let listener = TcpListener::bind(&quot;localhost:3465&quot;).await?;
+    let listener = TcpListener::bind("localhost:3465").await?;
 
     tokio::select! {
         res = async {
@@ -420,7 +420,7 @@ async fn main() -&gt; io::Result&lt;()&gt; {
             res?;
         }
         _ = rx =&gt; {
-            println!(&quot;terminating accept loop&quot;);
+            println!("terminating accept loop");
         }
     }
 
@@ -447,13 +447,13 @@ async fn main() {
 
     tokio::select! {
         Some(v) = rx1.recv() =&gt; {
-            println!(&quot;Got {:?} from rx1&quot;, v);
+            println!("Got {:?} from rx1", v);
         }
         Some(v) = rx2.recv() =&gt; {
-            println!(&quot;Got {:?} from rx2&quot;, v);
+            println!("Got {:?} from rx2", v);
         }
         else =&gt; {
-            println!(&quot;Both channels closed&quot;);
+            println!("Both channels closed");
         }
     }
 }</code></pre></pre>
@@ -509,14 +509,14 @@ async fn main() {
 
     tokio::select! {
         _ = rx1 =&gt; {
-            out.push_str(&quot;rx1 completed&quot;);
+            out.push_str("rx1 completed");
         }
         _ = rx2 =&gt; {
-            out.push_str(&quot;rx2 completed&quot;);
+            out.push_str("rx2 completed");
         }
     }
 
-    println!(&quot;{}&quot;, out);
+    println!("{}", out);
 }</code></pre></pre>
 <h2 id="loops"><a class="header" href="#loops">Loops</a></h2>
 <p><code>select!</code> 宏经常被用在循环中。这一部分将会通过几个示例来展示在循环中使用 <code>select!</code> 宏的常见方式。我们通过 select 多个 channels 开始：</p>
@@ -536,10 +536,10 @@ async fn main() {
             else =&gt; { break }
         };
 
-        println!(&quot;Got {:?}&quot;, msg);
+        println!("Got {:?}", msg);
     }
 
-    println!(&quot;All channels have been closed.&quot;);
+    println!("All channels have been closed.");
 }</code></pre></pre>
 <p>这个例子在三个 channel 的 rx 上select。当从任意一个 channel 中接收到一条消息，会将其打印到 STDOUT 。当有一条 channel close 了， <code>recv()</code> 会返回 <code>None</code> ，通过使用模式匹配，<code>select!</code> 宏会继续在剩余的 channels 上等待。当所有的 channel 都 close 了，这里的 <code>else</code> 分支会被计算，并且循环会终止。</p>
 <p><code>select!</code> 宏随机选中分支来先检查一下是否就绪。当多个 channel 挂起了它们的 value，一个随机的 channel 会被选中，并从它上面接收值。这是为了处理 receive loop 处理消息的速度比消息被推进 channel 的速度慢的情况，意味着 channel 开始被填满了。如果 <code>select!</code> <strong>没有</strong>随机选中一个分支来第一个检查，那么每次循环在迭代的时候， <code>rx1</code> 都会被第一个检查，如果 <code>rx1</code> 总是持有新消息，那么剩余的 channel 永远都不会被检查。</p>
@@ -572,7 +572,7 @@ async fn main() {
 }</code></pre></pre>
 <p>请注意，与在 <code>select!</code> 宏内调用 <code>action()</code> 不同，它在循环<strong>外部</strong>被调用。<code>action()</code> 的返回值被分配到了 <code>operation</code> 且<strong>没有</strong>调用 <code>.await</code> 。然后我们对 <code>operation</code> 调用了 <code>tokio::pin!</code> 。</p>
 <p>在 <code>select!</code> 循环内，与传入 <code>operation</code> 不同，我们传入了 <code>&amp;mut operation</code> 。这个 <code>operation</code> 变量正在跟踪执行中的异步操作。每次循环迭代使用这个相同的 operation 而不是来一次新的 <code>action()</code> 调用。</p>
-<p><code>select!</code> 的另一个分支从 channel 接收消息，如果消息是一个偶数，我们就结束循环。否则，再次开始 <code>select!</code> </p>
+<p><code>select!</code> 的另一个分支从 channel 接收消息，如果消息是一个偶数，我们就结束循环。否则，再次开始 <code>select!</code></p>
 <p>这是我们第一次使用 <code>tokio::pin!</code> ，我们还没打算深挖这它的细节。只需要注意，对一个引用进行 <code>.await</code> 调用，这个被引用的值必须被 pin 或者实现了 <code>Unpin</code> 。</p>
 <p>如果我们移除 <code>tokio::pin!</code> 这一行，并且尝试编译，我们会得到以下错误：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
@@ -598,7 +598,7 @@ async fn main() {
            which is required by
            `&amp;mut impl std::future::Future: std::future::Future`
 <span class="boring">}</span></code></pre></pre>
-<p>尽管我们已经在 <a href="https://m4n5ter.github.io/rust/mini-redis/async_in_depth.html">Async in depth</a> 了解了 <code>Future</code> ，但是这个错误对我们来说仍然不是很清晰。如果你在尝试对一个<strong>reference</strong> 调用 <code>.await</code> 时碰到了这样的一个关于 &quot; <code>Future</code> 没有实现... &quot; 的错误，那么这个 future 可能需要被 pin 。</p>
+<p>尽管我们已经在 <a href="https://m4n5ter.github.io/rust/mini-redis/async_in_depth.html">Async in depth</a> 了解了 <code>Future</code> ，但是这个错误对我们来说仍然不是很清晰。如果你在尝试对一个<strong>reference</strong> 调用 <code>.await</code> 时碰到了这样的一个关于 " <code>Future</code> 没有实现... " 的错误，那么这个 future 可能需要被 pin 。</p>
 <p>从 <a href="https://doc.rust-lang.org/std/pin/index.html">standard library</a> 阅读更多关于 <a href="https://doc.rust-lang.org/std/pin/index.html"><code>Pin</code></a> 的细节。</p>
 <h3 id="modifying-a-branch"><a class="header" href="#modifying-a-branch">Modifying a branch</a></h3>
 <p>让我们看一个稍微复杂一些的 loop。我们有：</p>
@@ -655,7 +655,7 @@ async fn main() {
                 done = true;
 
                 if let Some(v) = res {
-                    println!(&quot;GOT = {}&quot;, v);
+                    println!("GOT = {}", v);
                     return;
                 }
             }
@@ -678,7 +678,7 @@ async fn main() {
 note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
 <span class="boring">}</span></code></pre></pre>
 <p>当尝试在 <code>operation</code> 已经完成<strong>之后</strong>使用它时，这个错误发生了。一般来说，当使用 <code>.await</code> ，这个被 await 的值就被消费掉了。在这个例子中，我们 await 了一个引用，这意味着 <code>operation</code> 在它完成后仍然存在。</p>
-<p>为了避免这个 panic，如果 <code>operation</code> 已经完成，我们必须小心地禁用第一条分支。这里的 <code>done</code> 变量被用来跟踪 <code>operation</code> 是否完成。一个 <code>select!</code> 分支可能会包含一个 <strong>precondition</strong> （先决条件），这个先决条件会在 <code>select!</code> await 当前分支<strong>之前</strong>被检查（虽然顺序上它被写在后面，但是不影响它是一个 &quot;先决条件&quot;）。如果先决条件计算出了 <code>false</code> 那么该分支会被禁用。<code>done</code> 变量被初始化为 <code>false</code> 。当 <code>operation</code> 完成，<code>done</code> 会被设置为 <code>true</code> ，这样在下次循环迭代的时候将会禁用 <code>operation</code> 分支。当一个偶数消息从 channel 被接收，<code>operation</code> 会被重置，并且 <code>done</code> 会被设置为 <code>false</code> 。</p>
+<p>为了避免这个 panic，如果 <code>operation</code> 已经完成，我们必须小心地禁用第一条分支。这里的 <code>done</code> 变量被用来跟踪 <code>operation</code> 是否完成。一个 <code>select!</code> 分支可能会包含一个 <strong>precondition</strong> （先决条件），这个先决条件会在 <code>select!</code> await 当前分支<strong>之前</strong>被检查（虽然顺序上它被写在后面，但是不影响它是一个 "先决条件"）。如果先决条件计算出了 <code>false</code> 那么该分支会被禁用。<code>done</code> 变量被初始化为 <code>false</code> 。当 <code>operation</code> 完成，<code>done</code> 会被设置为 <code>true</code> ，这样在下次循环迭代的时候将会禁用 <code>operation</code> 分支。当一个偶数消息从 channel 被接收，<code>operation</code> 会被重置，并且 <code>done</code> 会被设置为 <code>false</code> 。</p>
 <h2 id="per-task-concurrency"><a class="header" href="#per-task-concurrency">Per-task concurrency</a></h2>
 <p><code>tokio::spawn</code> 和 <code>select!</code> 都能够运行并发的异步操作。然而，运行并发操作的策略有所不同。<code>tokio::spawn</code> 函数携带一个异步操作，并且生成一个新的任务去运行它。一个任务是 Tokio runtime 调度的对象。两个不同的任务会被 Tokio 独立调度，它们可能会同时运行在不同的操作系统线程上。正因如此，一个被生成的任务和被生成的线程具有相同的限制：不能有借用！</p>
 <p><code>select!</code> 宏会在<strong>同一个任务</strong>中并发运行所有的分支。因为所有的 <code>select!</code> 分支都在同一个任务中被执行，它们永远不可能<strong>同时</strong>被运行。<code>select!</code> 宏会在单个任务上多路复用异步操作。</p>
